fix paragraph spacing in text block

--- a/src/styles/prosemirror.scss
+++ b/src/styles/prosemirror.scss
@@ -43,7 +43,7 @@
   }
 
   p {
-    margin: 0;
+    margin: 0 !important;
   }
 
   ul,
